# ESL_final

./: README.md
final_basic/: System.h  Testbench.cpp  Testbench.h  cordic.cpp  main.cpp  shader.cpp
final_basic/stratus/: project.tcl  vertex.txt
final_opt/: System.cpp  cordic.cpp  shader.cpp  shader.h
final_opt/stratus/: .parts_shader_8463.ccpp
final_parallel/: System.cpp  System.h  Testbench.cpp  Testbench.h  cordic.cpp  cordic.h  projection.cpp  projection.h  shader.cpp  shader.h
final_parallel/stratus/: vertex.txt
final_parallel2/: Testbench.cpp  Testbench.h  cordic.cpp  shader.cpp  shader.h
final_parallel2/stratus/: .parts_cordic_19331.ccpp
final_pipe/: System.cpp  System.h  projection.cpp  projection.h  shader.cpp
final_pipe/stratus/: project.tcl
riscv-vp/sw/final_sw/: Makefile  main  main.c  main.h  output_vertex.txt
riscv-vp/vp/src/platform/basic-final/: CMakeLists.txt  cordic.h  main.cpp  shader.cpp  shader.h  system.cpp  system.h
riscv-vp/vp/src/platform/basic-final-parallel/: CMakeLists.txt  cordic.cpp  cordic.h  projection.cpp  shader.cpp  shader.h  system.cpp  system.h
riscv-vp/vp/src/platform/basic-final-pipe/: CMakeLists.txt  cordic.cpp  cordic.h  main.cpp  projection.h  shader.cpp  shader.h  system.cpp  system.h
